--- a/SampleSDK/app/src/main/AndroidManifest.xml
+++ b/SampleSDK/app/src/main/AndroidManifest.xml
@@ -21,17 +21,24 @@
         </activity>
         <activity
             android:name=".location.LocationSampleActivity"
-            android:label="@string/title_activity_location_sample"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ads.AdsSampleActivity"
-            android:label="@string/title_activity_location_sample"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".swipe.SwipeSampleActivity"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="336684a672860d50a11e523f666fbee2d44cf069"
             />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
 
         <!-- <service android:name="com.azsdk.location.utils.MyLocationService"/>-->
