--- a/SampleSDK/app/build.gradle
+++ b/SampleSDK/app/build.gradle
@@ -28,6 +28,7 @@ android {
         applicationId "com.azsamplesdk"
         minSdkVersion 15
         targetSdkVersion 27
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -49,6 +50,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation project(":azsdk")
+    implementation project(":azrefresh")
 
 
     implementation 'com.android.support:appcompat-v7:27.0.0'
@@ -61,6 +63,9 @@ dependencies {
     }
 
     implementation 'org.greenrobot:eventbus:3.1.1'
+
+
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
